--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "rimbnpxcard",
-  "version": "1.0.0",
+  "name": "rimbb",
+  "version": "1.0.6",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "Holidates": "./index.js"
+    "npxcard": "./index.js"
   },
   "files": [
     "*"
